# WesoForge

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build-cli.ps1  build-cli.sh  build-gui.ps1  build-gui.sh
.github/workflows/: build-cli-gui.yml  build-cli.yml
crates/chiavdf-fast/: Cargo.toml  build.rs
crates/chiavdf-fast/native/: chiavdf_fast_fallback.cpp
crates/chiavdf-fast/src/: api.rs  ffi.rs  lib.rs
crates/client/: Cargo.toml  build.rs
crates/client-core/: Cargo.toml
crates/client-core/src/: submitter.rs
crates/client-engine/: Cargo.toml
crates/client-engine/src/: api.rs  backend.rs  engine.rs  inflight.rs  lib.rs  worker.rs
crates/client-gui/: Cargo.toml  build.rs  tauri.conf.json
crates/client-gui/capabilities/: default.json
crates/client-gui/src/: main.rs
crates/client/src/: bench.rs  cli.rs  constants.rs  main.rs  shutdown.rs  terminal.rs  ui.rs
docker/: entrypoint.sh
docs/: build-linux.md  build-macos.md  build-windows.md
patches/: chiavdf-gmp63-mpz-macro.patch
scripts/: dev_cli.sh  dev_gui.sh
ui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.base.json  tsconfig.json  vite.config.ts
ui/public/: logo-64.avif
ui/src/: App.svelte  app.css
ui/src/components/: PopupFrame.svelte
