[workspace]
members = [
  "crates/client",
  "crates/client-affinity",
  "crates/client-core",
  "crates/client-engine",
  "crates/client-gui",
  "crates/chiavdf-fast",
]
resolver = "2"

# Keep symbols so Tauri can patch __TAURI_BUNDLE_TYPE into the AppImage binary.
[profile.release]
strip = false

[workspace.package]
edition = "2024"
version = "1.1.0"

[workspace.lints.rust]
unused_crate_dependencies = "deny"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal", "process", "io-util", "io-std", "time", "sync"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5.54", features = ["derive", "env"] }
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
indicatif = "0.18.3"
crossterm = "0.29.0"
libc = "0.2.180"
