[package]
name = "bbr-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wesoforge"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
libc = { workspace = true }

bbr-client-chiavdf-fast = { path = "../chiavdf-fast" }
bbr-client-core = { path = "../client-core" }
bbr-client-engine = { path = "../client-engine" }

[features]
# Use the production backend URL as the compiled default for `--backend-url`.
prod-backend = []
